--- a/custom_components/apex_fusion/manifest.json
+++ b/custom_components/apex_fusion/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "hass-apex",
+  "domain": "apex_fusion",
   "name": "Apex Fusion",
   "documentation": "https://github.com/danggrianto/hass-apex",
   "iot_class": "cloud_polling",
